packages/notatki-parser/parser$.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
    NoteList: peg$parseNoteList,
    ModelList: peg$parseModelList,
    Template: peg$parseTemplate,
    ClozeText: peg$parseClozeText,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = "!type:";
  const peg$c1 = "!deck:";
  const peg$c2 = "!tags:";
  const peg$c3 = "!";
  const peg$c4 = ":";
  const peg$c5 = "~~~";
  const peg$c6 = "!delete:";
  const peg$c7 = "model";
  const peg$c8 = "cloze";
  const peg$c9 = "field";
  const peg$c10 = "?";
  const peg$c11 = "card";
  const peg$c12 = "front";
  const peg$c13 = "back";
  const peg$c14 = "styles";
  const peg$c15 = "{{";
  const peg$c16 = "}}";
  const peg$c17 = "#";
  const peg$c18 = "^";
  const peg$c19 = "/";
  const peg$c20 = "::";
  const peg$c21 = "c";
  const peg$c22 = "\r\n";
  const peg$c23 = "\n";

  const peg$r0 = /^[#\/\^]/;
  const peg$r1 = /^[1-9]/;
  const peg$r2 = /^[0-9]/;
  const peg$r3 = /^[\-_a-z0-9]/i;
  const peg$r4 = /^[ \t]/;

  const peg$e0 = peg$otherExpectation("property");
  const peg$e1 = peg$literalExpectation("!type:", true);
  const peg$e2 = peg$literalExpectation("!deck:", true);
  const peg$e3 = peg$literalExpectation("!tags:", true);
  const peg$e4 = peg$otherExpectation("field");
  const peg$e5 = peg$literalExpectation("!", false);
  const peg$e6 = peg$literalExpectation(":", false);
  const peg$e7 = peg$anyExpectation();
  const peg$e8 = peg$literalExpectation("~~~", false);
  const peg$e9 = peg$otherExpectation("tombstone");
  const peg$e10 = peg$literalExpectation("!delete:", true);
  const peg$e11 = peg$literalExpectation("model", false);
  const peg$e12 = peg$literalExpectation("cloze", false);
  const peg$e13 = peg$literalExpectation("field", false);
  const peg$e14 = peg$literalExpectation("?", false);
  const peg$e15 = peg$literalExpectation("card", false);
  const peg$e16 = peg$literalExpectation("front", false);
  const peg$e17 = peg$literalExpectation("back", false);
  const peg$e18 = peg$literalExpectation("styles", false);
  const peg$e19 = peg$literalExpectation("{{", false);
  const peg$e20 = peg$classExpectation(["#", "/", "^"], false, false, false);
  const peg$e21 = peg$literalExpectation("}}", false);
  const peg$e22 = peg$literalExpectation("#", false);
  const peg$e23 = peg$literalExpectation("^", false);
  const peg$e24 = peg$literalExpectation("/", false);
  const peg$e25 = peg$literalExpectation("::", false);
  const peg$e26 = peg$literalExpectation("c", false);
  const peg$e27 = peg$classExpectation([["1", "9"]], false, false, false);
  const peg$e28 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e29 = peg$classExpectation(["-", "_", ["a", "z"], ["0", "9"]], false, true, false);
  const peg$e30 = peg$otherExpectation("newline");
  const peg$e31 = peg$literalExpectation("\r\n", false);
  const peg$e32 = peg$literalExpectation("\n", false);
  const peg$e33 = peg$otherExpectation("whitespace");
  const peg$e34 = peg$classExpectation([" ", "\t"], false, false, false);

  function peg$f0() {    return null;  }
  function peg$f1(list) {    return list;  }
  function peg$f2(properties, fields, end) {    return { type: "note", properties, fields, end, loc: location() };  }
  function peg$f3(name, value) {    return { name, value, loc: location() };  }
  function peg$f4() {    return "type";  }
  function peg$f5() {    return "deck";  }
  function peg$f6() {    return "tags";  }
  function peg$f7(text) {    return { text, loc: location() };  }
  function peg$f8(name, value) {    return { name, value, loc: location() };  }
  function peg$f9(text) {    return { text, loc: location() };  }
  function peg$f10(head, lines) {    return [head, ...lines].join("\n").trim();  }
  function peg$f11(text) {    return { text, loc: location() };  }
  function peg$f12(text) {    return { text, loc: location() };  }
  function peg$f13(id) {    return { type: "tombstone", id, loc: location() };  }
  function peg$f14(text) {    return { text, loc: location() };  }
  function peg$f15(list) {    return list;  }
  function peg$f16(name, cloze, fields, cards, styles) {    return { name, cloze, fields, cards, styles, loc: location() }  }
  function peg$f17(text) {    return { text, loc: location() };  }
  function peg$f18(name, opt) {    return { name, required: !opt, loc: location() }  }
  function peg$f19(text) {    return { text, loc: location() };  }
  function peg$f20(name, front, back) {    return { name, front, back, loc: location() }  }
  function peg$f21(text) {    return { text, loc: location() }  }
  function peg$f22(text) {    return { text, loc: location() }  }
  function peg$f23(text) {    return { text, loc: location() }  }
  function peg$f24(lines) {    return lines.join("\n").trim();  }
  function peg$f25(text) {    return { type: "text", text, loc: location() };  }
  function peg$f26(cond, items, end) {
    if (cond.field.text !== end.field.text) {
       error(`Expected "${cond.field.text}" but got "${end.field.text}".`, end.field.loc);
    }
    return { type: "branch", cond, items, end, loc: location() };
  }
  function peg$f27(field) {    return { type: "field", field, loc: location() };  }
  function peg$f28(field) {    return { field, not: false, loc: location() };  }
  function peg$f29(field) {    return { field, not: true,  loc: location() };  }
  function peg$f30(field) {    return { field, loc: location() };  }
  function peg$f31(text) {    return { text: text.replaceAll(/\s+/g, " "), loc: location() };  }
  function peg$f32(items) {    return items;  }
  function peg$f33(id, answer, hint) {    return { type: "cloze", id, answer, hint, loc: location() };  }
  function peg$f34(digits) {    return Number(digits);  }
  function peg$f35(items) {    return items;  }
  function peg$f36(text) {    return text;  }
  function peg$f37(text) {    return text;  }
  function peg$f38(text) {    return { text: text.replaceAll(/\s+/g, " "), loc: location() };  }
  function peg$f39(part) {    return part.join(" ");  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = '';
    peg$savedPos = s0;
    s1 = peg$f0();
    s0 = s1;

    return s0;
  }

  function peg$parseNoteList() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = [];
    s4 = peg$currPos;
    s5 = peg$parse_();
    s6 = peg$parseNewline();
    if (s6 !== peg$FAILED) {
      s5 = [s5, s6];
      s4 = s5;
    } else {
      peg$currPos = s4;
      s4 = peg$FAILED;
    }
    while (s4 !== peg$FAILED) {
      s3.push(s4);
      s4 = peg$currPos;
      s5 = peg$parse_();
      s6 = peg$parseNewline();
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
    }
    s4 = peg$parseNoteListItem();
    if (s4 !== peg$FAILED) {
      s2 = s4;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parse_();
      s6 = peg$parseNewline();
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parse_();
        s6 = peg$parseNewline();
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      s4 = peg$parseNoteListItem();
      if (s4 !== peg$FAILED) {
        s2 = s4;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parse_();
    s5 = peg$parseNewline();
    if (s5 !== peg$FAILED) {
      s4 = [s4, s5];
      s3 = s4;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseNewline();
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f1(s1);

    return s0;
  }

  function peg$parseNoteListItem() {
    let s0;

    s0 = peg$parseTombstone();
    if (s0 === peg$FAILED) {
      s0 = peg$parseNote();
    }

    return s0;
  }

  function peg$parseNote() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = [];
    s4 = peg$currPos;
    s5 = peg$parse_();
    s6 = peg$parseNewline();
    if (s6 !== peg$FAILED) {
      s5 = [s5, s6];
      s4 = s5;
    } else {
      peg$currPos = s4;
      s4 = peg$FAILED;
    }
    while (s4 !== peg$FAILED) {
      s3.push(s4);
      s4 = peg$currPos;
      s5 = peg$parse_();
      s6 = peg$parseNewline();
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
    }
    s4 = peg$parseNoteProperty();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = peg$parseNewline();
      if (s6 !== peg$FAILED) {
        s2 = s4;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parse_();
      s6 = peg$parseNewline();
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parse_();
        s6 = peg$parseNewline();
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      s4 = peg$parseNoteProperty();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseNewline();
        if (s6 !== peg$FAILED) {
          s2 = s4;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    s2 = [];
    s3 = peg$currPos;
    s4 = [];
    s5 = peg$currPos;
    s6 = peg$parse_();
    s7 = peg$parseNewline();
    if (s7 !== peg$FAILED) {
      s6 = [s6, s7];
      s5 = s6;
    } else {
      peg$currPos = s5;
      s5 = peg$FAILED;
    }
    while (s5 !== peg$FAILED) {
      s4.push(s5);
      s5 = peg$currPos;
      s6 = peg$parse_();
      s7 = peg$parseNewline();
      if (s7 !== peg$FAILED) {
        s6 = [s6, s7];
        s5 = s6;
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
    }
    s5 = peg$parseNoteField();
    if (s5 !== peg$FAILED) {
      s6 = peg$parse_();
      s7 = peg$parseNewline();
      if (s7 !== peg$FAILED) {
        s3 = s5;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = [];
      s5 = peg$currPos;
      s6 = peg$parse_();
      s7 = peg$parseNewline();
      if (s7 !== peg$FAILED) {
        s6 = [s6, s7];
        s5 = s6;
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$currPos;
        s6 = peg$parse_();
        s7 = peg$parseNewline();
        if (s7 !== peg$FAILED) {
          s6 = [s6, s7];
          s5 = s6;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
      }
      s5 = peg$parseNoteField();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseNewline();
        if (s7 !== peg$FAILED) {
          s3 = s5;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    s3 = peg$currPos;
    s4 = [];
    s5 = peg$currPos;
    s6 = peg$parse_();
    s7 = peg$parseNewline();
    if (s7 !== peg$FAILED) {
      s6 = [s6, s7];
      s5 = s6;
    } else {
      peg$currPos = s5;
      s5 = peg$FAILED;
    }
    while (s5 !== peg$FAILED) {
      s4.push(s5);
      s5 = peg$currPos;
      s6 = peg$parse_();
      s7 = peg$parseNewline();
      if (s7 !== peg$FAILED) {
        s6 = [s6, s7];
        s5 = s6;
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
    }
    s5 = peg$parseNoteEnd();
    if (s5 !== peg$FAILED) {
      s6 = peg$parse_();
      s7 = peg$parseNewline();
      if (s7 !== peg$FAILED) {
        s3 = s5;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNoteProperty() {
    let s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseNotePropertyName();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseNormalText();
      peg$savedPos = s0;
      s0 = peg$f3(s1, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parseNotePropertyName() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = input.substr(peg$currPos, 6);
    if (s2.toLowerCase() === peg$c0) {
      peg$currPos += (6);
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s1;
      s2 = peg$f4();
    }
    s1 = s2;
    if (s1 === peg$FAILED) {
      s1 = peg$currPos;
      s2 = input.substr(peg$currPos, 6);
      if (s2.toLowerCase() === peg$c1) {
        peg$currPos += (6);
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$f5();
      }
      s1 = s2;
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = input.substr(peg$currPos, 6);
        if (s2.toLowerCase() === peg$c2) {
          peg$currPos += (6);
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$f6();
        }
        s1 = s2;
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f7(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNoteField() {
    let s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseNoteFieldName();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseNoteFieldValue();
      peg$savedPos = s0;
      s0 = peg$f8(s1, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }

    return s0;
  }

  function peg$parseNoteFieldName() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 33) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseFieldNameText();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c4;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f9(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNoteFieldValue() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
